packages/@vue-spectrum/actionbar/src/actionbar.css
.ActionBarContainer {
  display: flex;
  flex-direction: column;
  position: relative;

  .vs-table__table {
    transform: translateX(0.5px);
    transform-origin: left top;
  }

  .vs-table__head-cell--selection,
  .vs-table__cell--selection {
    padding-left: 15.5px;
  }

  .vs-table .spectrum-Checkbox-input {
    width: 22px;
  }

  & > :not(.react-spectrum-ActionBar) {
    flex: 1;
    min-height: 0;
  }

  & > .react-spectrum-ActionBar {
    flex: 0 0 auto;
  }
}

.react-spectrum-ActionBar {
  transition: height var(--spectrum-global-animation-duration-100) ease-in-out,
              opacity var(--spectrum-global-animation-duration-100) ease-in-out;

  block-size: 0;
  opacity: 0;
  width: 100%;

  overflow: hidden;

  &.is-open {
    height: calc(var(--spectrum-global-dimension-size-600) + var(--spectrum-global-dimension-size-100) * 2);
    opacity: 1;
    transition-delay: 0ms;
  }

  .react-spectrum-ActionBar-bar {
    display: grid;
    grid-template-areas: "clear selected . actiongroup";
    grid-template-columns: auto max-content minmax(var(--spectrum-global-dimension-size-300), 1fr) auto;
    align-items: center;
    isolation: isolate;
    justify-content: space-between;
    padding: var(--spectrum-global-dimension-size-100);

    position: absolute;
    bottom: var(--spectrum-global-dimension-size-100);
    left: var(--spectrum-global-dimension-size-100);
    right: var(--spectrum-global-dimension-size-100);
    max-width: 960px;
    margin: 0 auto;

    background: var(--spectrum-global-color-gray-50);
    border-radius: var(--spectrum-popover-border-radius);
    border-style: solid;
    border-width: var(--spectrum-popover-border-size);
    border-color: var(--spectrum-popover-border-color);
    box-shadow: 0 2px 8px var(--spectrum-alias-dropshadow-color);

    transform: translateY(var(--spectrum-overlay-positive-transform-distance));
    transition: transform var(--spectrum-global-animation-duration-100) ease-in-out;
  }

  &.is-open .react-spectrum-ActionBar-bar {
    transform: translateY(0);
  }

  &.react-spectrum-ActionBar--emphasized .react-spectrum-ActionBar-bar {
    background: var(--spectrum-global-color-static-blue-700);
    color: white;
    box-shadow: 0 2px 6px var(--spectrum-alias-dropshadow-color);
    border: none;
  }

  .react-spectrum-ActionBar-selectedCount {
    grid-area: selected;
    padding: 0 var(--spectrum-global-dimension-size-50);
    user-select: none;
    cursor: default;
  }

  .react-spectrum-ActionBar-actionGroup {
    grid-area: actiongroup;
    min-width: 76px;
    width: 76px;

    .vs-spectrum-action-group__wrapper {
      width: 100%;
    }

    .flex-gap {
      width: auto;
      height: auto;
      margin: 0;
      --row-gap: 0px;
      --column-gap: 0px;
      column-gap: var(--spectrum-global-dimension-size-100);
      row-gap: 0;
    }

    .spectrum-ActionGroup-item,
    .spectrum-ActionGroup-menu {
      inline-size: 34px;
      min-inline-size: 34px;
    }

    .flex-container .flex-gap > * {
      margin: 0;
    }
  }
}

@media (forced-colors: active) {
  .react-spectrum-ActionBar {
    &.react-spectrum-ActionBar--emphasized .react-spectrum-ActionBar-bar {
      border: 1px solid transparent;
    }
  }
}

